--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.number26.bitcoin.MainActivity">
+    tools:context=".ui.activities.BitCoinMarketPriceChartActivity">
 
+    <fragment
+        android:id="@+id/devices_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.number26.bitcoin.ui.fragments.BitCoinMarketPriceChartFragment"
+        tools:layout="@layout/fragment_bitcoin_market_price_chart"/>
 
 </RelativeLayout>
