--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,10 +10,10 @@
     tools:context=".ui.activities.BitCoinMarketPriceChartActivity">
 
     <fragment
-        android:id="@+id/devices_fragment"
+        android:id="@+id/bitCoin_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:name="com.number26.bitcoin.ui.fragments.BitCoinMarketPriceChartFragment"
-        tools:layout="@layout/fragment_bitcoin_market_price_chart"/>
+        tools:layout="@layout/fragment_bit_coin_market_price"/>
 
-</RelativeLayout>
+</LinearLayout>
