--- a/app/src/main/res/layout/activity_bit_coin_market_price.xml
+++ b/app/src/main/res/layout/activity_bit_coin_market_price.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.activities.BitCoinMarketPriceChartActivity">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <fragment
         android:id="@+id/bitCoin_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/fragment_bit_coin_market_price_margin"
         android:name="com.number26.bitcoin.ui.fragments.BitCoinMarketPriceChartFragment"
         tools:layout="@layout/fragment_bit_coin_market_price"/>
 
-</LinearLayout>
+</merge>
